# flypipe-examples

./: README.md  pyproject.toml
nyc_tlc/: __init__.py  dlt_simple.py  how-to.py  stream.py
nyc_tlc/pipeline/data/: download_load_bronze.py  silver_yellow_trip.py
nyc_tlc/pipeline/features/: payment_type.py  pickup_hour.py
nyc_tlc/pipeline/model/: data.py  graph.py
nyc_tlc/pipeline/model/predict/: batch_inverse_scaler.py  batch_predict.py  online_inverse_scaler.py  online_predict.py
nyc_tlc/pipeline/model/train/: downsample.py  metrics.py  scale.py  split.py  train.py
