[build-system]
requires = ["flit_core >=3.8,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nyc_tlc"
authors = [
    {name = "Jose Helio de Brum Muller", email = "josemuller.flypipe@gmail.com"},
    {name = "Chris Marwick", email = "chrismarwick.flypipe@gmail.com"},
]


classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "description"]
requires-python=">=3.8"
